update syntax when referencing Protect component

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -7,7 +7,7 @@ description: A collection of utility functions and components in order to allow 
 
 Clerk provides two kinds of helpers for authorization:
 
-- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect />` component](/docs/components/protect) and the experimental `auth().protect()` method fall into this category.
+- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect>` component](/docs/components/protect) and the experimental `auth().protect()` method fall into this category.
 - **`has` helpers** are more composable and flexible. They allow you to check and see what permissions a user *has*. You can decide what to do if the user lacks the permission.
 
 Both kinds of helpers can check a user's role and permissions. The recommended approach is to verify a user's permissions. Roles can be added and removed and their permissions changed. Authorizing by permissions is explicit.
@@ -26,9 +26,9 @@ Clerk's `has()` function can be used on both the frontend and the backend to det
 
 The examples below work for both SSR and CSR. Examples are written for Next.js App Router but they are supported by any React meta framework, such as Remix or Gatsby.
 
-<Tabs type="framework" items={["Next.js with <Protect />", "Next.js with has()"]}>
+<Tabs type="framework" items={["Next.js with <Protect>", "Next.js with has()"]}>
   <Tab>
-    The following snippet uses Clerk's `<Protect />` component to only render the form for users with the `org:team_settings:manage` permission.
+    The following snippet uses Clerk's `<Protect>` component to only render the form for users with the `org:team_settings:manage` permission.
 
     ```tsx filename="/app/dashboard/settings/form.tsx"
       'use client';
@@ -75,7 +75,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
 
 ## Authorization in React Server Components
 
-<Tabs type="framework" items={[ "RSC with has()", "RSC with auth().protect()", "RSC with <Protect />"]}>
+<Tabs type="framework" items={[ "RSC with has()", "RSC with auth().protect()", "RSC with <Protect>"]}>
   <Tab>
     The following example uses `has()` to inspect a user's permissions granularly. If the user doesn't have the `org:team_settings:read` permission, the component returns `null` instead of rendering its children.
 
@@ -113,7 +113,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
   </Tab>
 
   <Tab>
-    The following snippet uses `<Protect />`'s `condition` prop to conditionally render its children if the user has the `org:team_settings:read` permission.
+    The following snippet uses `<Protect>`'s `condition` prop to conditionally render its children if the user has the `org:team_settings:read` permission.
 
       ```tsx filename="/app/dashboard/settings/layout.tsx"
         import type { PropsWithChildren } from "react";
@@ -259,7 +259,7 @@ You can pass a `role` the same way you can pass a `permission` in all the exampl
 
 <Tabs type="framework" items={[ "RSC with <Protect>","RSC with auth().protect()", "Client Component with has()", ]}>
   <Tab>
-    The following example uses `<Protect />`'s `condition` prop to conditionally render its children if the user is either an `org:admin` or an `org:billing_manager`.
+    The following example uses `<Protect>`'s `condition` prop to conditionally render its children if the user is either an `org:admin` or an `org:billing_manager`.
 
     ```tsx filename="/app/dashboard/settings/layout.tsx"
       import type { PropsWithChildren } from "react";
