--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -1,17 +1,17 @@
 ---
-title: <Protect />
+title: <Protect>
 description: The Protect component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
 ---
 
-# `<Protect />`
+# `<Protect>`
 
-The `<Protect />` component is used for authorization. It only renders its children when the current user has the specified [permission or role](/docs/organizations/roles-permissions) in the organization.
+The `<Protect>` component is used for authorization. It only renders its children when the current user has the specified [permission or role](/docs/organizations/roles-permissions) in the organization.
 
 ## Usage
 
-To limit who is able to see the content that `<Protect />` renders, you can pass either the `permission` or `role` prop. The recommended approach is to use `permission` because this lets you modify roles without breaking your application. Permissions can be assigned to different roles with ease.
+To limit who is able to see the content that `<Protect>` renders, you can pass either the `permission` or `role` prop. The recommended approach is to use `permission` because this lets you modify roles without breaking your application. Permissions can be assigned to different roles with ease.
 
-If you do not pass either prop, `<Protect />` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their role or its permissions.
+If you do not pass either prop, `<Protect>` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their role or its permissions.
 
 For more complex authorization logic, pass conditional logic to the `condition` prop.
 
@@ -57,7 +57,7 @@ The children of the following component will only be visible to users with roles
 
 ### Render content by role
 
-While authorization by `permission` is recommended, for convenience, `<Protect />` allows a `role` prop to be passed. The children of the following component will only be visible to users with the `org:billing` role.
+While authorization by `permission` is recommended, for convenience, `<Protect>` allows a `role` prop to be passed. The children of the following component will only be visible to users with the `org:billing` role.
 
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
@@ -105,5 +105,5 @@ While authorization by `permission` is recommended, for convenience, `<Protect /
 | `role?` | `string` | Optional string corresponding to an Organization's Role in the format `org:<role>` |
 
 <Callout type="warning">
-  `<Protect />` can only accept `permission` *or* `role`, not both. The recommended approach is to use `permission`.
+  `<Protect>` can only accept `permission` *or* `role`, not both. The recommended approach is to use `permission`.
 </Callout>
