--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -27,3 +27,11 @@ In the Clerk Dashboard, you can create Roles, assign Permissions to them, and ch
 2. Select the **Members** tab. 
 3. In the list of members, find the one whose Role you want to change.
 4. Select another Role from their Role dropdown.
+
+## Delete a Role in your Organization
+
+You cannot delete a role that is still assigned to members of an organization. You will want to change members to a different role before completing the steps.
+
+1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the **Roles** tab. 
+2. Select the "..." menu next to the role.
+3. Select "Delete role".
