--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -11,7 +11,7 @@ Clerk supports modeling your own custom role and permissions to control access t
 
 Roles determine a user's level of access to the organization. You can extend a role's privileges and access to resources by adding [permissions](#permissions).
 
-### Default role
+### Default roles
 
 For each instance, there are currently two default roles:
 
