--- a/docs/components/control/redirect-to-signup.mdx
+++ b/docs/components/control/redirect-to-signup.mdx
@@ -9,6 +9,8 @@ The `<RedirectToSignUp />` component will navigate to the sign up URL which has 
 
 ## Usage
 
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
   ```tsx filename="pages/_app.tsx"
@@ -48,7 +50,7 @@ The `<RedirectToSignUp />` component will navigate to the sign up URL which has 
 
   function PrivatePage() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <SignedIn>
           Content that is displayed to signed in
           users.
@@ -88,6 +90,8 @@ The `<RedirectToSignUp />` component will navigate to the sign up URL which has 
   ```
   </Tab>
 </Tabs>
+
+</InjectKeys>
 
 ## Properties
 
