--- a/docs/components/control/redirect-to-userprofile.mdx
+++ b/docs/components/control/redirect-to-userprofile.mdx
@@ -9,6 +9,8 @@ The `<RedirectToUserProfile />` component will navigate to the user profile URL 
 
 ## Usage
 
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
   ```tsx filename="pages/_app.tsx"
@@ -49,7 +51,7 @@ The `<RedirectToUserProfile />` component will navigate to the user profile URL 
 
   function PrivatePage() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <SignedIn>
           <RedirectToUserProfile/>
         </SignedIn>
@@ -85,3 +87,5 @@ The `<RedirectToUserProfile />` component will navigate to the user profile URL 
   ```
   </Tab>
 </Tabs>
+
+</InjectKeys>
