--- a/docs/integrations/databases/supabase.mdx
+++ b/docs/integrations/databases/supabase.mdx
@@ -56,11 +56,15 @@ Reveal the JWT secret to copy it and then paste it in the **Signing key field** 
 
 To configure your client, you need to set some local environment variables. Assuming a React application, set the following:
 
+<InjectKeys>
+
 ```js filename=".env.local"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aGFuZHktZ251LTIwLmNsZXJrLmFjY291bnRzLmRldiQ
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_KEY=your-supabase-anon-key
 ```
+
+</InjectKeys>
 
 You can find your Frontend API value in the Clerk Dashboard on the **[API keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. It will be the **Publishable key**.
 
