--- a/docs/components/control/authenticate-with-callback.mdx
+++ b/docs/components/control/authenticate-with-callback.mdx
@@ -9,6 +9,8 @@ The `<AuthenticateWithRedirectCallback />` is used to complete a custom OAuth fl
 
 ## Usage
 
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
   This example below uses built in Next.js pages, but you could use any routing library you want.
@@ -86,7 +88,7 @@ The `<AuthenticateWithRedirectCallback />` is used to complete a custom OAuth fl
 
   function App() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         {/* Define a / route that displays the OAuth button */}
         <Routes>
           <Route path="/" element={<HomePages />} />
@@ -132,6 +134,8 @@ The `<AuthenticateWithRedirectCallback />` is used to complete a custom OAuth fl
 
   </Tab>
 </Tabs>
+
+</InjectKeys>
 
 ## Properties
 
