--- a/docs/components/control/clerk-loaded.mdx
+++ b/docs/components/control/clerk-loaded.mdx
@@ -9,6 +9,8 @@ The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and 
 
 ## Usage
 
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
   ```tsx filename="pages/_app.tsx"
@@ -58,7 +60,7 @@ The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and 
 
   function App() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <ClerkLoaded>
           <Page />
         </ClerkLoaded>
@@ -99,3 +101,5 @@ The `<ClerkLoaded />` component guarantees that the Clerk object has loaded and 
   ```
   </Tab>
 </Tabs>
+
+</InjectKeys>
