--- a/docs/components/control/multi-session.mdx
+++ b/docs/components/control/multi-session.mdx
@@ -9,6 +9,8 @@ The `<MultisessionAppSupport />` provides a wrapper for your React application t
 
 ## Usage
 
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React"]}>
   <Tab>
   ```tsx filename="pages/_app.tsx"
@@ -36,7 +38,7 @@ The `<MultisessionAppSupport />` provides a wrapper for your React application t
 
   function App() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <MultisessionAppSupport>
           <Page />
         </MultisessionAppSupport>
@@ -53,3 +55,5 @@ The `<MultisessionAppSupport />` provides a wrapper for your React application t
   ```
   </Tab>
 </Tabs>
+
+</InjectKeys>
