--- a/docs/components/control/signed-in.mdx
+++ b/docs/components/control/signed-in.mdx
@@ -9,6 +9,9 @@ description: Conditionally render content only when a user is signed in.
 The `<SignedIn />` component offers authentication checks as a cross-cutting concern. Any children components wrapped by a `<SignedIn />` component will be rendered only if there's a User with an active Session signed in your application.
 
 ## Usage
+
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
   ```tsx filename="app.tsx"
@@ -42,7 +45,7 @@ The `<SignedIn />` component offers authentication checks as a cross-cutting con
 
   function Page() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <section>
           <div>
             This content is always visible.
@@ -82,6 +85,8 @@ The `<SignedIn />` component offers authentication checks as a cross-cutting con
   </Tab>
 </Tabs>
 
+</InjectKeys>
+
 ### Usage with React Router
 
 Below is an example of how to use `<SignedIn />` with React Router. The `<SignedIn />` component can be used as a child of a `<Route />` component to render content only to signed in users.
@@ -95,7 +100,7 @@ import {
 
 function App() {
   return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <Routes>
         <Route
           path="/"
