--- a/docs/components/control/signed-out.mdx
+++ b/docs/components/control/signed-out.mdx
@@ -8,6 +8,9 @@ description: Conditionally render content only when a user is signed out.
 The `<SignedOut />` component offers authentication checks as a cross-cutting concern. Any child nodes wrapped by a `<SignedOut />` component will be rendered only if there's no User signed in to your application.
 
 ## Usage
+
+<InjectKeys>
+
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
   ```tsx filename="app.tsx"
@@ -40,7 +43,7 @@ The `<SignedOut />` component offers authentication checks as a cross-cutting co
 
   function Page() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <section>
           <div>
             This content is always visible.
@@ -70,7 +73,7 @@ The `<SignedOut />` component offers authentication checks as a cross-cutting co
 
   function App() {
     return (
-      <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+      <ClerkProvider publishableKey={{pub_key}}>
         <Routes>
         <Route
           path="/"
@@ -116,3 +119,5 @@ The `<SignedOut />` component offers authentication checks as a cross-cutting co
   ```
   </Tab>
 </Tabs>
+
+</InjectKeys>
