update text for consistency across examples

--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -42,7 +42,7 @@ export default function Home() {
   }
   return (
     <div>
-      <p>Welcome back. You've been here
+      <p>Welcome back. You have been here
       {sessions.length} times before.
       </p>
     </div>
