--- a/docs/authentication/social-connections/linkedin-oidc.mdx
+++ b/docs/authentication/social-connections/linkedin-oidc.mdx
@@ -22,13 +22,13 @@ description: Learn how to set up a social connection with LinkedIn in your Clerk
 - Enable OpenID Connect in your LinkedIn application
 </TutorialHero>
 
-## Introduction
+## Configure LinkedIn connection for your development instance
 
-To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for *development instances* - no other configuration is needed. Navigate to the Clerk Dashboard and go to **User & Authentication -> [Social Connections](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections)**. Scroll to find the LinkedIn option, toggle it on, and click **Save**.
+To make the development flow as smooth as possible, Clerk uses preconfigured shared OAuth credentials and redirect URIs for *development instances* - no other configuration is needed. Navigate to the Clerk Dashboard and go to **User & Authentication -> [Social Connections](https://dashboard.clerk.dev/last-active?path=user-authentication/social-connections)**. From the list of OAuth vendors, scroll to find the LinkedIn option. Toggle it on and click **Save**.
 
-In *production instances*, you must provide custom credentials, which includes generating your own Client ID and Client Secret using your LinkedIn Developer account. Don't worry, this tutorial will walk you through that process in just a few steps.
+## Configure LinkedIn connection for your production instance
 
-## Tutorial
+In *production instances*, you must provide custom credentials, which includes generating your own **Client ID** and **Client Secret** using your LinkedIn Developer account. Don't worry, this tutorial will walk you through that process in just a few steps.
 
 <Steps>
 
