--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -1,10 +1,10 @@
 ---
-title: Add React Router to your Clerk powered React application
+title: Add React Router to your Clerk-powered React application
 description: Learn how to add React Router to your React application using their Data API router.
 ---
 
 <TutorialHero 
-  quickstart="react"
+  framework="react"
   exampleRepo={[ 
     {
       title: "React Quickstart Repo",
@@ -29,17 +29,15 @@ description: Learn how to add React Router to your React application using their
 - Wire layouts and routes up with `createBrowserRouter`
 </TutorialHero>
 
+# Add React Router to your Clerk-powered React application
 
-
-# Add React Router to your Clerk powered React application
-
-Learn how to add React Router to your application using React Router's new Data API router. This will cover configuring layouts and setting up protected routes.
+Learn how to add React Router to your application using React Router's new Data API router. This tutorial will cover configuring layouts and setting up protected routes.
 
 <Steps>
 
 ### Install `react-router-dom`
 
-React Router's `react-router-dom` is a mature, battle tested routing package for React that gives you many options. As it is the most popular routing option, we will use it for this guide. 
+React Router's `react-router-dom` is a mature, battle tested routing package for React that gives you many options. As it is the most popular routing option, it will be used for this guide. 
 
 <CodeBlockTabs type="installer" options={["npm", "pnpm", "yarn" ]}>
   ```bash filename="terminal"
@@ -57,11 +55,11 @@ React Router's `react-router-dom` is a mature, battle tested routing package for
 
 ### Create components for your routes
 
-The exact routes your will need will depends on your application. For this guide you will create `/`, `/contact`, `/dashboard`, '/sign-in' and 'sign-up' routes. The `/dashboard` route will contain a default route (`/dashbard/`) and a invoices routes (`/dashboard/invoices`). The first step will be creating basic components for these routes. 
+The exact routes your will need depends on your application. For this guide, you will create `/`, `/contact`, `/dashboard`, '/sign-in' and 'sign-up' routes. The `/dashboard` route will contain a default route (`/dashbard/`) and an invoices route (`/dashboard/invoices`). The first step will be creating basic components for these routes. 
 
 Use the tabs below to find the example components and recreate these files using the path from each tab.
 
-<CodeBlockTabs type="installer" options={["Index", "Contact", "Sign-in", "Sign-up", "Dashboard",  "Invoices"]}>
+<CodeBlockTabs options={["Index", "Contact", "Sign-in", "Sign-up", "Dashboard",  "Invoices"]}>
 
 ```tsx filename="src/routes/index.tsx"
 import { Link } from "react-router-dom";
@@ -69,7 +67,7 @@ import { Link } from "react-router-dom";
 export default function IndexPage() {
   return (
     <div>
-      <h1> This is the index page</h1>
+      <h1>This is the index page</h1>
       <div>
         <ul>
           <li><Link to="/sign-up">Sign Up</Link></li>
@@ -123,7 +121,7 @@ export default function DashboardPage() {
   return (
     <>
       <h1>Dashboard page</h1>
-      This is a protected page.
+      <p>This is a protected page.</p>
 
       <ul>
         <li><Link to="/dashboard/invoices">Invoices</Link></li>
@@ -156,12 +154,11 @@ export default function InvoicesPage() {
 
 ### Create layouts
 
-You're going to create two layouts for your application. One will mount `<ClerkProvider />` and act as a top level layout. It will also be a place for a header, footer and other standard elements for your application.
+You're going to create two layouts for your application. One will mount [`<ClerkProvider>`](/docs/components/clerk-provider) and act as a top level layout. It will also be a place for a header, footer, and other standard elements for your application.
 
-The second layout will be non-rendering and will protect everything in the `/dashboard` route. This avoids the need for per page auth checks, or using control componnets.
+The second layout will be non-rendering and will protect everything in the `/dashboard` route. This avoids the need for per-page auth checks or for using Clerk's control componnets.
 
-
-<CodeBlockTabs type="installer" options={["Root Layout", "Dashboard Layout"]}>
+<CodeBlockTabs options={["Root Layout", "Dashboard Layout"]}>
 
 ```tsx filename="src/layouts/root-layout.tsx"
 import { Link, Outlet } from 'react-router-dom'
@@ -225,15 +222,16 @@ export default function DashboardLayout() {
 
 #### Key Takeaways
 
-- The new root-layout.tsx has a simple header that includes the `<UserButton />` and a link to the `/sign-in` page instead of a `<SignInButton />`. The rendering of these is controlled byt the `<SignedIn />` and `<SignedUp />` control components. This is very similar to the [Embed the `<UserButton />` and `<SignInButton />`](/docs/quickstarts/react#embed-the-user-button-and-sign-in-button) step from the [React Quickstart](/docs/quickstarts/react).
-
-Both the layouts contain a `<Outlet />` componet from `react-router-dom`. This behaves similar to `{children}` in Next.js or more generic Rect componets. You will take advantage of this component in the next step.
+- The new root-layout.tsx has a simple header that includes the `<UserButton />` and a link to the `/sign-in` page instead of a `<SignInButton />`. The rendering of these is controlled by the `<SignedIn>` and `<SignedOut>` control components. This is very similar to the [Embed the `<UserButton />` and `<SignInButton />`](/docs/quickstarts/react#embed-the-user-button-and-sign-in-button) step from the [React Quickstart](/docs/quickstarts/react).
+- Both the layouts contain an `<Outlet />` component from `react-router-dom`. This behaves similar to `{children}` in Next.js or more generic React components. You will take advantage of this component in the next step.
 
 ### Wire layouts and routes up with `createBrowserRouter`
 
-With all the routes and layouts you need created, you now need to wire up the layouts and the routes with the `createBrowserRouter` function from `reacr-router-dom`. This will use the Data API (aka Data Router) to configure your application.
+With all the routes and layouts you need created, you now need to wire up the layouts and the routes with the `createBrowserRouter` function from `react-router-dom`. This will use the Data API (aka Data Router) to configure your application.
 
-You can start by removing `src/App.tsx` -- the contents of that file moved to `src/layouts/root-layout.tsx`. In `src/main.tsx` you will import `RouterProvider` and `createBrowserRouter()` from `react-router-dom`, as well as all of the default components from the layouts and routes you created. Replace the contents inside of `<React.StritMode />` with just ` <RouterProvider router={router} />`. Lastly you will build the `router` using `createBrowserRouter()`. 
+You can start by removing `src/App.tsx` -- the contents of that file were moved to `src/layouts/root-layout.tsx`. 
+
+In `src/main.tsx`, import `RouterProvider` and `createBrowserRouter()` from `react-router-dom`, as well as all of the default components from the layouts and routes you created. Replace the contents inside of `<React.StrictMode />` with only ` <RouterProvider router={router} />`. Lastly, you will build the `router` using `createBrowserRouter()`. 
 
 ```tsx filename="src/main.tsx"
 import React from 'react'
@@ -282,25 +280,19 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 
 #### Key Takeaways
 
-- The top most object in the `router` is the `<RootLayout />` component, and everything else is a child. Any child route will be mounted where the `<Outlet />` component is inside the root layout. This wraps the entire application with `<ClerkProvider />` and allows you to add a header, footer, sidebars and other pieces that will be available to the entire application.
-- Several reoutes are direct children of the root layout. These are all public routes. You can use control components like `<SignedIn>` or check the `userId` from `useAuth()` if yo uwant to make content protected.
-- The `<DashboardLayout` is child of the root layout, renders nothing and has a check to see if the `userId` exists. This will confirm that a user is logged in. If the userId is not truthy, then the user will be redirected to the `/sign-in` route to sign-in. That protects all pages in the `/dashboard` route. All children of `/dashboard` will be mounted inside the `<Outlet />` component in the dashboard layout.
-
+- The top most object in the `router` is the `<RootLayout />` component, and everything else is a child. Any child route will be mounted where the `<Outlet />` component is inside the root layout. This wraps the entire application with `<ClerkProvider>` and allows you to add a header, footer, sidebars and other pieces that will be available to the entire application.
+- Several routes are direct children of the root layout. These are all public routes. You can use control components like `<SignedIn>` or check the `userId` from `useAuth()` if you want to make content protected.
+- The `<DashboardLayout />` is child of the root layout, renders nothing, and has a check to see if the `userId` exists. This will confirm that a user is logged in. If the `userId` is not truthy, then the user will be redirected to the `/sign-in` route to sign-in. That protects all pages in the `/dashboard` route. All children of `/dashboard` will be mounted inside of the `<Outlet />` component in the dashboard layout.
 
 </Steps>
 
-## You're ready!
+## Finished 🎉
 
-Your application is setup with react-router and ready for you to add more layouts and routes as needed! If you want to get started using a template from this guide, please clone the following repository and then checkout the `integrate-react-router-dom-using-data-router-method` branch.
+Your application is setup with `react-router-dom` and ready for you to add more layouts and routes as needed! If you want to get started using a template from this guide, please clone the following repository and then checkout the `integrate-react-router-dom-using-data-router-method` branch.
 
 * [Clerk + React Quickstart](https://github.com/clerk/clerk-react-quickstart)
 
-
-
-
 ### Next steps
-
-Now that you have an application integrated with Clerk, you will want to read the following documentation:
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
