removing 'control' from compojnents as jargon

--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -23,7 +23,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 - Set up your environment keys
 - Import the Publishable Key
 - Wrap your React app in `<ClerkProvider />`
-- Use Clerk's control components to protect your content
+- Use Clerk components to protect your content
 - Embed the `<SignInButton />` and `<SignOutButton />`
 - Deploy your application
 </TutorialHero>
@@ -146,9 +146,9 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 )
 ```
 
-### Use Clerk's control components to protect your content
+### Use Clerk components to protect your content
 
-You can use the `<SignedIn />` and `<SignedOut />` control components to restrict access to content, or even whole pages. The `<SignedIn />` component requires the user be signed in to view the content inside the tags. The `<SignedOut />` components requires the user to be signed out.
+You can use Clerk's `<SignedIn />` and `<SignedOut />` components to restrict access to content, or even whole pages. The `<SignedIn />` component requires the user be signed in to view the content inside the tags. The `<SignedOut />` components requires the user to be signed out.
 
 ```tsx filename="src/App.tsx {1, 7-12}
 import { SignedOut, SignedIn } from "@clerk/clerk-react"
