fixing borked filenames

--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -28,7 +28,6 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 - Deploy your application
 </TutorialHero>
 
-
 <Steps>
 
 ### Set up a React application using Vite
@@ -41,7 +40,6 @@ Scaffold your new React application using [Vite](https://vitejs.dev/guide/#scaff
   cd clerk-react
   npm install
   npm run dev
-
   ```
 
   ```bash filename="terminal"
@@ -123,7 +121,7 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 ### Wrap your app in `<ClerkProvider />`
 
 The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your `/src/main.tsx` file. 
-```tsx filename="src/main.tsx" {16, 18}
+```tsx filename="src/main.tsx" {5, 16, 18}
 import React from 'react'
 import ReactDOM from 'react-dom/client'
 import App from './App.tsx'
@@ -150,7 +148,7 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 
 You can use Clerk's `<SignedIn />` and `<SignedOut />` components to restrict access to content, or even whole pages. The `<SignedIn />` component requires the user be signed in to view the content inside the tags. The `<SignedOut />` components requires the user to be signed out.
 
-```tsx filename="src/App.tsx {1, 7-12}
+```tsx filename="src/App.tsx" {1, 7-12}
 import { SignedOut, SignedIn } from "@clerk/clerk-react"
 
 function App() {
@@ -178,7 +176,7 @@ Clerk offers a set of [prebuilt components](/docs/components/overview) to add fu
 
 The example below is a page that would show a `<SignInButton />` to users that are signed out, or a `<SignOutButton />` to users that are signed in. You can see that the prop `afterSignOutUrl` is passed to the `<SignOutButton />`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out. In this example, the user is redirected to the homepage (`/`) of the application.
 
-```tsx filename="src/App.tsx {1, 7-14}
+```tsx filename="src/App.tsx" {1, 7-14}
 import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react"
 
 function App() {
