Updating steps to make it a little cleearer what's happening

--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -146,7 +146,7 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 
 ### Use Clerk components to protect your content
 
-You can use Clerk's `<SignedIn />` and `<SignedOut />` components to restrict access to content, or even whole pages. The `<SignedIn />` component requires the user be signed in to view the content inside the tags. The `<SignedOut />` components requires the user to be signed out.
+Clerk offers a set of [prebuilt components](/docs/components/overview) that can gate access to content based on whether a user is signed in and has the correct permissions. You can use Clerk's [`<SignedIn>`](/docs/components/control/signed-in) and [`<SignedOut>`](/docs/components/control/signed-out) components to restrict access to content and even whole pages. The `<SignedIn>` component requires the user be signed in to view the content inside the tags. The `<SignedOut>` components requires the user to be signed out.
 
 ```tsx filename="src/App.tsx" {1, 7-12}
 import { SignedOut, SignedIn } from "@clerk/clerk-react"
@@ -168,15 +168,17 @@ function App() {
 export default App
 ```
 
-At this point, your application should use Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box. Start your React application via `npm run dev`, visit `http://localhost:5173`, and sign up to get access to your application. 
+Start your React application via `npm run dev` and visit `http://localhost:5173` to see what signed out users will see. Next you will add a button so you can sign in.
 
 ### Embed the `<SignInButton />` and `<SignOutButton />`
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) are *unstyled* components that you can use to either create a basic button or to wrap around your styled button and turn it into a sign-in or sign-out button.
+The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) are components that you can use to either create a basic button or to wrap around your styled button and turn it into a sign-in or sign-out button.
 
-The example below is a page that would show a `<SignInButton />` to users that are signed out, or a `<SignOutButton />` to users that are signed in. You can see that the prop `afterSignOutUrl` is passed to the `<SignOutButton />`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out. In this example, the user is redirected to the homepage (`/`) of the application.
+Add a `<SignInButton />` inside the content wrapped by `<SignedOut>` so people have an option to sign in. And add a `<SignOutButton />` inside the content wrapped by `<SignedIn>` to let users who are signed in sign out. 
 
-```tsx filename="src/App.tsx" {1, 7-14}
+Notice the `afterSignOutUrl` prop being passed to `<SignOutButton />`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out. In this example, the user is redirected to the homepage (`/`) of the application.
+
+```tsx filename="src/App.tsx" {1, 8, 12}
 import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react"
 
 function App() {
@@ -198,7 +200,7 @@ function App() {
 export default App
 ```
 
-If you copied the example above, you can start your React application via `npm run dev`, visit `http://localhost:5173`, and sign in to see the protected content and the protected `<SignOutButton />`. Select the sign-out button to see the public content and the `<SignInButton />`.
+Visit [`http://localhost:5173`](http://localhost:5173) and try signing in to see the protected content and signing out to see the protected and unprotected content.
 
 ### Deploy your application
 
