--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -168,7 +168,7 @@ function App() {
 export default App
 ```
 
-Start your React application via `npm run dev` and visit `http://localhost:5173` to see what signed out users will see. Next you will add a button so you can sign in.
+Start your React application via `npm run dev` and visit [`http://localhost:5173`](http://localhost:5173) to see what signed out users will see. Next you will add a button so you can sign in.
 
 ### Embed the `<SignInButton />` and `<SignOutButton />`
 
@@ -215,12 +215,14 @@ Congratulations! Your app is now using Clerk to authenticate users. But this is 
 
 ## Next step: Add routing with React Router
 
-React has many options for handling routing and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API-based router (nicknamed Data Router), please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
+React has many options for handling routing, and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API-based router (nicknamed Data Router), please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
 
-You can also learn more about Clerk components, how to customize them, and how to use Clerk's client side helpers by checking out the following guides:
+You can also learn more about Clerk components, how to customize them, and how to use Clerk's client side helpers. The following guides are good places to start.
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards title="Add React Router" description="Learn how to add routing to your app with React Router." link="/docs/references/react/add-react-router" cta="Learn More" />
+
     <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
 
     <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/authentication/sign-in" cta="Learn More" />
