--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -37,7 +37,7 @@ Learn how to add React Router to your application using React Router's new Data 
 
 ### Install `react-router-dom`
 
-React Router's `react-router-dom` is a mature, battle tested routing package for React that gives you many options. As it is the most popular routing option, it will be used for this guide. 
+React Router's `react-router-dom` is a mature, battle tested routing package for React that gives you many options. As it is the most popular routing option, it will be used for this guide.
 
 <CodeBlockTabs type="installer" options={["npm", "pnpm", "yarn" ]}>
   ```bash filename="terminal"
@@ -55,7 +55,7 @@ React Router's `react-router-dom` is a mature, battle tested routing package for
 
 ### Create components for your routes
 
-The exact routes your will need depends on your application. For this guide, you will create `/`, `/contact`, `/dashboard`, '/sign-in' and 'sign-up' routes. The `/dashboard` route will contain a default route (`/dashbard/`) and an invoices route (`/dashboard/invoices`). The first step will be creating basic components for these routes. 
+The exact routes you will need depends on your application. For this guide, you will create `/`, `/contact`, `/dashboard`, `/sign-in`, and `sign-up` routes. The `/dashboard` route will contain a default route (`/dashbard/`) and an invoices route (`/dashboard/invoices`). The first step will be creating basic components for these routes. 
 
 Use the tabs below to find the example components and recreate these files using the path from each tab.
 
@@ -229,7 +229,7 @@ export default function DashboardLayout() {
 
 With all the routes and layouts you need created, you now need to wire up the layouts and the routes with the `createBrowserRouter` function from `react-router-dom`. This will use the Data API (aka Data Router) to configure your application.
 
-You can start by removing `src/App.tsx` -- the contents of that file were moved to `src/layouts/root-layout.tsx`. 
+You can start by removing `src/App.tsx`—the contents of that file were moved to `src/layouts/root-layout.tsx`. 
 
 In `src/main.tsx`, import `RouterProvider` and `createBrowserRouter()` from `react-router-dom`, as well as all of the default components from the layouts and routes you created. Replace the contents inside of `<React.StrictMode />` with only ` <RouterProvider router={router} />`. Lastly, you will build the `router` using `createBrowserRouter()`. 
 
@@ -278,6 +278,8 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 )
 ```
 
+Visit [`http://localhost:5173`](http://localhost:5173) and explore your app's pages.
+
 #### Key Takeaways
 
 - The top most object in the `router` is the `<RootLayout />` component, and everything else is a child. Any child route will be mounted where the `<Outlet />` component is inside the root layout. This wraps the entire application with `<ClerkProvider>` and allows you to add a header, footer, sidebars and other pieces that will be available to the entire application.
@@ -285,8 +287,6 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 - The `<DashboardLayout />` is child of the root layout, renders nothing, and has a check to see if the `userId` exists. This will confirm that a user is logged in. If the `userId` is not truthy, then the user will be redirected to the `/sign-in` route to sign-in. That protects all pages in the `/dashboard` route. All children of `/dashboard` will be mounted inside of the `<Outlet />` component in the dashboard layout.
 
 </Steps>
-
-## Finished 🎉
 
 Your application is setup with `react-router-dom` and ready for you to add more layouts and routes as needed! If you want to get started using a template from this guide, please clone the following repository and then checkout the `integrate-react-router-dom-using-data-router-method` branch.
 
