update references to components to use appropriate tag format (#565)

--- a/docs/components/protect.mdx
+++ b/docs/components/protect.mdx
@@ -1,5 +1,5 @@
 ---
-title: <Protect />
+title: <Protect>
 description: The Protect component is used for authorization. It only renders its children when the current user has the specified permission or role in the organization.
 ---
 
@@ -11,7 +11,7 @@ The `<Protect>` component is used for authorization. It only renders its childre
 
 You can pass either a `permission` or `role` key to `<Protect>` to limit who can see the content it renders. The recommended approach is to use `permission` because this lets you modify Roles without breaking your application. Permissions can be assigned to different Roles with ease.
 
-If you do not pass either prop, `<Protect>` behaves the same as [`<SignedIn />`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
+If you do not pass either prop, `<Protect>` behaves the same as [`<SignedIn>`](/docs/components/control/signed-in) and will render its children if the user is signed in, regardless of their Role or its Permissions.
 
 For more complex authorization logic, pass conditional logic to the `condition` prop.
 
