Added info for images

--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -4,6 +4,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 ---
 
 <TutorialHero 
+  framework="react"
   exampleRepo={[ 
     {
       title: "React Quickstart Repo",
