--- a/docs/references/react/add-react-router.mdx
+++ b/docs/references/react/add-react-router.mdx
@@ -4,7 +4,7 @@ description: Learn how to add React Router to your React application using their
 ---
 
 <TutorialHero 
-  framework="react"
+  framework="reactrouter"
   exampleRepo={[ 
     {
       title: "React Quickstart Repo",
