fix typo in envs doc

--- a/docs/deployments/environments.mdx
+++ b/docs/deployments/environments.mdx
@@ -8,7 +8,7 @@ description: An overview of the differences between Development and Production i
 When creating a new application within Clerk, you are typically provided with two instances: `Development` and `Production`.  These instances vary slightly and should be used appropriately.
 
 ## Development Instance
-A `Development` instance is our default instanced type and has characteristics that allow it to be more useful for local development, and therefore has a more relaxed overall security posture.
+A `Development` instance is our default instance type and has characteristics that allow it to be more useful for local development, and therefore has a more relaxed overall security posture.
 
 Some notable examples of `Development`-only characteristics are: 
 - A "Development" banner is shown prominently to make clear you're managing or configuring non-production data
