apply suggestions from code review
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/deployments/environments.mdx
+++ b/docs/deployments/environments.mdx
@@ -8,22 +8,18 @@ description: An overview of the differences between Development and Production i
 When creating a new application within Clerk, you are typically provided with two instances: `Development` and `Production`.  These instances vary slightly and should be used appropriately.
 
 ## Development Instance
-A `Development` instance is our default instance type and has characteristics that allow it to be more useful for local development, and therefore has a more relaxed overall security posture.
+A `Development` instance is Clerk's default instance type and has characteristics that allow it to be more useful for local development. To facilitate development and local authentication, `Development` instances have a more relaxed security posture and are not suitable for production workloads.
 
 Some notable examples of `Development`-only characteristics are: 
 - A "Development" banner is shown prominently to make clear you're managing or configuring non-production data
-- Email and SMS templates are prepended with the environment type to prevent against using Development instances for production purposes
+- Email and SMS templates are prefixed with the environment type to prevent against using `Development` instances for production purposes
 - Some social connections use shared credentials by default 
-- Certain functionality like Bot Protection is only available in Production mode
-> **Note:** All paid functionality is available in a `Development` instance. It's only when you deploy your application to `Production` that you will be asked to upgrade to a `Pro` account. See [our pricing page](/pricing) for full details.
-
-
+- Certain functionality, like Bot Protection, is only available in Production mode
+> **Note:** All paid functionality is available in a `Development` instance. However, when you deploy your application to `Production` you will be asked to upgrade to a `Pro` account. See [our pricing page](/pricing) for full details.
 ## Production Instance
-A `Production` instance is the more robust of our instance types. It is meant to support high-volumes of production traffic and by default has a more strict security posture.
+A `Production` instance is the more robust Clerk's instance types. `Production` instances are meant to support high volumes of traffic and by default have a more strict security posture.
 
-Some notable differences with a `Development` instance are: 
+Some notable differences between `Production` and `Development` instances are: 
 - You must associate a production domain within the Dashboard
 - You are required to provision your own SSO credentials 
-
-
 To take advantage, you must activate your `Production` environment. We've created a guide for [Deploying to Production](/docs/deployments/overview#deploying-to-production) to help you avoid any common pitfalls.
