commit some suggestions from roy + bryce

--- a/docs/deployments/environments.mdx
+++ b/docs/deployments/environments.mdx
@@ -5,7 +5,7 @@ description: An overview of the differences between Development and Production i
 
 # Environments / Instances
 
-When creating a new application within Clerk, you are typically provided with two instances: `Development` and `Production`.  These instances vary slightly and should be used appropriately.
+When creating a new application within Clerk, you are provided with two instances: `Development` and `Production`.  These instances vary slightly and should only be used appropriately.
 
 ## Development Instance
 A `Development` instance is Clerk's default instance type and has characteristics that allow it to be more useful for local development. To facilitate development and local authentication, `Development` instances have a more relaxed security posture and are not suitable for production workloads.
@@ -15,6 +15,10 @@ Some notable examples of `Development`-only characteristics are:
 - Email and SMS templates are prefixed with the environment type to prevent against using `Development` instances for production purposes
 - Some social connections use shared credentials by default 
 - Certain functionality, like Bot Protection, is only available in Production mode
+- [The Account Portal](/docs/account-portal/overview) will use a Clerk development domain that ends with `accounts.dev` instead of your app's production domain
+- OAuth consent screens will show the development domain that ends with `accounts.dev` instead of your production domain
+- Search engines will not be able to crawl and index your application
+
 > **Note:** All paid functionality is available in a `Development` instance. However, when you deploy your application to `Production` you will be asked to upgrade to a `Pro` account. See [our pricing page](/pricing) for full details.
 ## Production Instance
 A `Production` instance is the more robust Clerk's instance types. `Production` instances are meant to support high volumes of traffic and by default have a more strict security posture.
@@ -22,4 +26,5 @@ A `Production` instance is the more robust Clerk's instance types. `Production` 
 Some notable differences between `Production` and `Development` instances are: 
 - You must associate a production domain within the Dashboard
 - You are required to provision your own SSO credentials 
-To take advantage, you must activate your `Production` environment. We've created a guide for [Deploying to Production](/docs/deployments/overview#deploying-to-production) to help you avoid any common pitfalls.
+
+When going to production, must first activate your `Production` environment. We've created a guide for [Deploying to Production](/docs/deployments/overview#deploying-to-production) to walk you through the process and to avoid common pitfalls.
